Оптимизация хранения + некоторые фиксы сонара